--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-jsx": "^1.0.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "reset-css": "^5.0.1"
   }
 }
